--- a/StillWaitingApi/appsettings.Development.json
+++ b/StillWaitingApi/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "DatabaseUrl": "https://stillwaiting-db.documents.azure.com:443/",
   "Database": "StillWaiting-Dev",
   "Container": "Items",
