--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,11 @@
     "cSpell.words": [
         "Appletv",
         "appsettings",
+        "healthcheck",
+        "itemstatus",
         "Newtonsoft",
-        "Omnipod"
+        "Omnipod",
+        "stillwaiting",
+        "updateitem"
     ]
 }
